# dd_clip

./: Makefile  README.md  environment.cpu.yml  environment.gpu.yml  pyproject.toml
src/dd_clip/core/: model.py
src/dd_clip/interfaces/: _api.py  _cli.py
src/dd_clip/schemas/: request.py  response.py  settings.py
src/dd_clip/schemas/enums/: ctranslate2.py  nllb.py  segment.py
src/dd_clip/utils/: info.py  logging.py
